@@ -3,6 +3,7 @@
 - Added webpage (URL) indexing using Llama-Index; new options were added to the Google Search plugin: the command "web_index" for indexing a specified page (just ask to index any URL) and "Auto-index", which enables automatic indexing of URLs used by the plugin (disabled by default).
 - Decreased the default chunk size in the Google Search plugin.
 - Assistant run creation and message sending moved to an async thread.
+- Improved files receive from Assistants.
 
 2.0.156 (2024-02-19)
 
